--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "version": "0.0.0",
+  "version": "0.0.1",
   "name": "coer91.styles",
   "author": "Christian Omar Escamilla Rodríguez",
   "license": "MIT",
   "description": "",
   "main": "src/index.scss",
   "keywords": ["styles", "icons", "svg", "images", "fonts"],
+  "files": ["dist"],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/coer91/coer91.styles"
   },
   "scripts": {
     "copy:css": "sass --no-source-map --style=compressed src/index.scss ./dist/coer91.styles.css",
     "copy:fonts": "xcopy src\\fonts dist\\fonts /E /I /Y",
     "copy:svg": "xcopy src\\svg dist\\svg /E /I /Y",
     "copy:images": "xcopy src\\images dist\\images /E /I /Y",
-    "build": "npm run copy:css && npm run copy:fonts && npm run copy:svg && npm run copy:images"
+    "build": "npm run copy:css && npm run copy:fonts && npm run copy:svg && npm run copy:images",
+    "publish": "npm run build && npm publish --access public"
   },
   "dependencies": {
     "sass": "^1.92.0"
