--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.19",
+  "version": "0.0.23",
   "name": "coer91.styles",
   "author": "Christian Omar Escamilla Rodríguez",
   "license": "MIT",
@@ -16,8 +16,8 @@
     "copy:fonts": "xcopy src\\fonts dist\\fonts /E /I /Y",
     "copy:svg": "xcopy src\\svg dist\\svg /E /I /Y",
     "copy:images": "xcopy src\\images dist\\images /E /I /Y",
-    "build": "npm run copy:css && npm run copy:fonts && npm run copy:svg && npm run copy:images",
-    "publish:npm": "npm run build && npm publish --access public"
+    "build:lib": "npm run copy:css && npm run copy:fonts && npm run copy:svg && npm run copy:images",
+    "publish:npm": "npm run build:lib && npm publish --access public"
   },
   "dependencies": {
     "sass": "^1.92.0"
