--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.24",
+  "version": "0.0.27",
   "name": "coer91.styles",
   "author": "Christian Omar Escamilla Rodríguez",
   "license": "MIT",
@@ -11,8 +11,19 @@
     "type": "git",
     "url": "https://github.com/coer91/coer91.styles"
   },
+  "exports": {
+    ".": {
+      "import": "./dist/coer91.scss"
+    },
+    "./images": {
+      "import": "./dist/images" 
+    },
+    "./svg": {
+      "import": "./dist/svg" 
+    }
+  },
   "scripts": {
-    "copy:css": "sass --no-source-map --style=compressed src/index.scss ./dist/coer91.styles.css",
+    "copy:css": "sass --no-source-map --style=compressed src/index.scss ./dist/coer91.css",
     "copy:fonts": "xcopy src\\fonts dist\\fonts /E /I /Y",
     "copy:svg": "xcopy src\\svg dist\\svg /E /I /Y",
     "copy:images": "xcopy src\\images dist\\images /E /I /Y",
